# CHM

./: CMakeLists.txt  build.sh  howto.txt  main.cpp
include/: mke.h
src/: globals.cpp  mesh_generator.cpp  mke_solver.cpp  plot_utils.cpp
